fix visibility bugs

--- a/ephios/static/ephios/scss/ephios_custom.scss
+++ b/ephios/static/ephios/scss/ephios_custom.scss
@@ -353,5 +353,5 @@ $shift-box-target: lighten($primary, 20%);
 
 // show comment visibility
 .comment-visibility-icon {
-  min-width: 1.2rem;
+  min-width: 1.5rem;
 }
